--- a/css/hair_salon_tokiwa.css
+++ b/css/hair_salon_tokiwa.css
@@ -50,9 +50,9 @@ div.banner{
     margin-top:10px;
 }
 div.container img{
-    width:100%;
+    width:90%;
     /* height:800px; */
-    height: 850px;
+    margin-left:90px;
 }
 div.container p{
     font-size:60px;
@@ -66,7 +66,7 @@ div.container p{
 /* Concept Area */
   div.concept{
     /* border:2px solid red; */
-    margin-left: 10px;
+    margin-left: 30px;
     font-size: large;
     color: grey;
   }
@@ -97,7 +97,11 @@ div.container p{
   }
   .con2{
     position: relative;
-    left:5px;
+    left:10px;
+  }
+  .con3{
+    position: relative;
+    left:10px;
   }
   .pr{
     position: relative;
@@ -123,6 +127,8 @@ div.container p{
     width:40%;
     height: 20%;
     float:left;
+    position: relative;
+    top:20px;
   }
 
   div.concept td{
@@ -132,28 +138,80 @@ div.container p{
   /* Menu Area */
   div.menu{
     /* border:2px solid orange; */
-    margin-left: 10px;
+    margin-left: 30px;
+  }
+  div.menu table{
+    /* border:2px solid yellow; */
+    width: 100%;
+  }
+  div.menu td{
+    /* border:2px solid blue; */
+    width: 50%;
   }
   div.menu img.products{
-    /* border: 2px solid yellow; */
-    width:280px;
-    height:280px;
+    /* border: 2px solid brown; */
+    width:270px;
+    height:250px;
     float: left;
   }
-  table li{
-    list-style: none;
-    margin-left:40px;
-    margin-bottom:5px;
+
+  div.menu img.menu1{
+    width:270px;
+    height:250px;
+    float: left;
+    /* border:2px solid red; */
+  }
+  .menu2{
+    font-size: large;
+    position: relative;
+    left:20px;
+  }
+  .menu3{
+    font-size: large;
+    position: relative;
+    left:20px;
+  }
+  .menu4{
+    font-size: large;
+    position: relative;
+    left:20px;
+  }
+  .menu5{
+    position: relative;
+    top:20px;
+    left:20px;
+  }
+  div.menu p{
     font-size: large;
   }
+
+  div.menu ul li{
+    /* border: 2px solid black; */
+    width: 50%;
+    list-style: none;
+    margin-bottom:5px;
+    font-size: large;
+    float:left;
+    position: relative;
+    left:30px;
+  }
+
   /* Access Area */
   div.access{
     /* border:2px solid orange; */
-    margin-left: 10px;
+    margin-left: 30px;
   }
   div.access ul{
     /* border:2px solid red; */
     width: 350px;
+  }
+  table li{
+    /* border: 2px solid pink; */
+    list-style: none;
+    margin-bottom:5px;
+    font-size: large;
+    position: relative;
+    top:5px;
   }
   div.access img{
     margin-left: 120px;
@@ -170,7 +228,7 @@ div.container p{
     /* border:2px solid pink; */
     width: 100%;
     height: 80%;
-    margin-left:20px;
+    margin-left:30px;
     /* background-color: rgba(255, 228, 196, 0.593); */
 }
 div.footer img{
